--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+        "lint": "vue-cli-service lint",
+        "deploy": "surgecli deploy dist pixivviewer.surge.sh"
     },
     "dependencies": {
-        "core-js": "^3.30.1",
-        "vue": "^3.2.47",
-        "vue-router": "^4.1.6"
+        "core-js": "^3.31.0",
+        "vue": "^3.3.4",
+        "vue-router": "^4.2.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.21.4",
-        "@babel/eslint-parser": "^7.21.3",
+        "@babel/core": "^7.22.5",
+        "@babel/eslint-parser": "^7.22.5",
         "@vue/cli-plugin-babel": "~5.0.8",
         "@vue/cli-plugin-eslint": "~5.0.8",
         "@vue/cli-service": "~5.0.8",
-        "eslint": "^8.39.0",
-        "eslint-plugin-vue": "^9.11.0"
+        "eslint": "^8.43.0",
+        "eslint-plugin-vue": "^9.15.1"
     },
     "eslintConfig": {
         "root": true,
