--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
         "deploy": "surgecli deploy dist pixivviewer.surge.sh"
     },
     "dependencies": {
-        "core-js": "^3.33.2",
-        "vue": "^3.3.7",
-        "vue-router": "^4.2.5"
+        "core-js": "^3.36.0",
+        "vue": "^3.4.21",
+        "vue-router": "^4.3.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.23.2",
-        "@babel/eslint-parser": "^7.22.15",
+        "@babel/core": "^7.24.0",
+        "@babel/eslint-parser": "^7.23.10",
         "@vue/cli-plugin-babel": "~5.0.8",
         "@vue/cli-plugin-eslint": "~5.0.8",
         "@vue/cli-service": "~5.0.8",
-        "eslint": "^8.52.0",
-        "eslint-plugin-vue": "^9.18.1"
+        "eslint": "^8.57.0",
+        "eslint-plugin-vue": "^9.22.0"
     },
     "eslintConfig": {
         "root": true,
@@ -41,5 +41,6 @@
         "last 2 versions",
         "not dead",
         "not ie 11"
-    ]
+    ],
+    "packageManager": "yarn@4.1.1"
 }
